- fixed: add wrap property to modal content

--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -50,6 +50,7 @@
   
 .modal-content {
     display: flex;
+    flex-flow: row-wrap;
     justify-content: center;
     align-items: center;
     background-color: #F1FAEE;
